--- a/src/app/meal/meal.component.html
+++ b/src/app/meal/meal.component.html
@@ -1,13 +1,17 @@
-<app-navbar-meal></app-navbar-meal>
-
-<app-break-fast [breakFastData]="breakFast"></app-break-fast>
-<app-sea-food [seafoodData]="seafood"></app-sea-food>
-<app-pasta [pastaData]="past"></app-pasta>
+<div class="bg-baheeg">
 
 
 
-<!-- <app-break-fast [breakFastData]="breakFast"></app-break-fast>
-<app-sea-food [seafoodData]="seafood"></app-sea-food>
-<app-pasta [pastaData]="past"></app-pasta> -->
+    <app-navbar-meal></app-navbar-meal>
 
-<router-outlet></router-outlet>
+
+
+
+
+    <!-- <app-break-fast [breakFastData]="breakFast"></app-break-fast>
+    <app-sea-food [seafoodData]="seafood"></app-sea-food>
+    <app-pasta [pastaData]="past"></app-pasta> -->
+    <router-outlet>
+
+    </router-outlet>
+</div>
