--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,1 +1,26 @@
-<p>contacts works!</p>
+<section id="contact" class="contact    py-5">
+
+    <div class="container py-5">
+        <div class="header text-center py-5">
+            <p class="h1 baheeg">CONTACT US</p>
+            <div class=" star position-relative d-inline-block">
+                <i class="str fa-solid fa-star"></i>
+            </div>
+        </div>
+
+
+        <div class="row mx-auto">
+            <!-- <div class="col-md-12 mx-5"> -->
+            <div class="col-md-7 mx-auto">
+                <div>
+                    <input type="text" class="mb-4  form-control" placeholder="enter name please">
+                    <input type="text" class="mb-4 form-control" placeholder="enter your Email">
+                    <input type="text" class="mb-4 form-control" placeholder=" Enter phone Number">
+                    <input type="text" class="mb-4 form-control" placeholder=" Ender your address">
+                    <textarea name="message" id="text" placeholder="text" class="mb-3 form-control"></textarea>
+                    <button type="submit" class="mb-3 btn text-white btn-outline bg-baheeg">Send Message</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
