--- a/src/app/navbar-meal/navbar-meal.component.html
+++ b/src/app/navbar-meal/navbar-meal.component.html
@@ -1,19 +1,22 @@
-<nav class="navbar navbar-expand-lg bg-info ">
-    <div class="container">
+<nav class="navbar navbar-expand-lg bg-transparent position-sticky top-0  z-3  ">
+    <div class="container ">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav bg-dark navbar-dark fs-5 px-5 py-1 rounded-5  mx-auto">
+            <ul class="navbar-nav bg-dark navbar-dark fs-5 px-5 py-1 rounded-5   mx-auto">
                 <li class="nav-item mx-2">
-                    <a class="nav-link px-lg-4" routerLinkActive="bg-info rounded-5" routerLink="seafood">SeaFood</a>
+                    <a class="nav-link px-4" routerLinkActive="bg-baheeg text-white rounded-5"
+                        routerLink="seafood">SeaFood</a>
                 </li>
                 <li class="nav-item mx-2 ">
-                    <a class="nav-link px-4" routerLinkActive="bg-info rounded-5" routerLink="pasta">Pasta</a>
+                    <a class="nav-link px-4" routerLinkActive="bg-baheeg text-white rounded-5"
+                        routerLink="pasta">Pasta</a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link px-4" routerLinkActive="bg-info rounded-5" routerLink="breakfast">BreakFast</a>
+                    <a class="nav-link px-4" routerLinkActive="bg-baheeg text-white rounded-5"
+                        routerLink="breakfast">BreakFast</a>
                 </li>
             </ul>
         </div>
