--- a/src/app/sea-food/sea-food.component.html
+++ b/src/app/sea-food/sea-food.component.html
@@ -1,13 +1,15 @@
-<div class="container py-4 bg-black">
+<div class="container py-4 ">
     <div class="row g-3">
-        @for (meal of seafoodData ; track $index) {
+
+        <!-- @for (meal of seafoodData ; track $index) { -->
+        @for (meal of seafood ; track $index) {
         <div class="col-md-3">
             <div class="card h-100">
                 <img class="card-img-top" [src]="meal.strMealThumb" alt="Title" />
                 <div class="card-body h-100">
                     <h4 class="card-title"> {{meal.strMeal}} </h4>
                     <p class="card-text">{{meal.Desc}}</p>
-                    <p class="card-text">{{meal.idMeal}}</p>
+
                 </div>
             </div>
 
