--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class=" mainn-nav navbar navbar-expand-lg  ">
+<nav class=" main-nav navbar navbar-expand-lg  ">
     <div class="container">
         <a class="navbar-brand"><img src="/images/download.jpeg" class="w-50 rounded-circle" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -9,23 +9,23 @@
             <ul class="navbar-nav fs-5 ms-auto">
                 <li class="nav-item">
                     <a class="nav-link px-3 mx-2   " routerLinkActive=" rounded-5 bg-baheeg text-white "
-                        routerLink="home">Home</a>
+                        routerLink="/home">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link px-3 mx-2 " routerLinkActive=" rounded-5 bg-baheeg text-white "
-                        routerLink="about">About</a>
+                        routerLink="/about">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link px-3 mx-2 " [routerLinkActiveOptions]="{exact:true}"
-                        routerLinkActive=" rounded-5 bg-baheeg text-white " routerLink="meals">Meals</a>
+                        routerLinkActive=" rounded-5 bg-baheeg text-white " routerLink="/meals">Meals</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link px-3 mx-2 " routerLinkActive=" rounded-5 bg-baheeg text-white "
-                        routerLink="team">team</a>
+                        routerLink="/team">team</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLinkActive=" rounded-5 bg-baheeg text-white "
-                        routerLink="contacts">Contacts</a>
+                        routerLink="/contacts">Contacts</a>
                 </li>
             </ul>
         </div>
