--- a/src/app/break-fast/break-fast.component.html
+++ b/src/app/break-fast/break-fast.component.html
@@ -1,5 +1,7 @@
 <div class="container py-4">
-    <div class="row g-3">
+    <app-card-meal [Data]="breakFast"></app-card-meal>
+    <!-- card templet -->
+    <!-- <div class="row g-3">
         @for (meal of breakFast ; track $index) {
         <div class="col-md-3">
             <div class="card h-100">
@@ -15,5 +17,5 @@
         </div>
 
         }
-    </div>
+    </div> -->
 </div>
