--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid vh-50">
+<div class=" ">
     <header class="text-center bg-dark text-white fs-5 w-100">Hello from Team Component
         <hr>
     </header>
@@ -21,7 +21,7 @@
             libero sequi, quibusdam distinctio voluptates, modi dolores vel a? Cumque rem vel libero natus
             distinctio
             fugiat consectetur aperiam voluptatem placeat</p>
-        <div #display class="display-content mx-auto w-50 text-center">
+        <div #display class="display-content mx-auto w-75 text-center">
             <img src="/images/Seafood logo (Baheeg)_1736980767494.jpeg" class="w-25" alt="">
             <p class="text-center">quaerat temporibus harum hic! Officiis, natus? Cupiditate ducimus esse velit
                 consectetur sapiente non
