--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,6 +1,6 @@
-<section id="contact" class="contact    py-5">
+<section id="contact" class="contact  bg-secondary-subtle  pb-3">
 
-    <div class="container py-5">
+    <div class="container ">
         <div class="header text-center py-5">
             <p class="h1 baheeg">CONTACT US</p>
             <div class=" star position-relative d-inline-block">
@@ -13,11 +13,12 @@
             <!-- <div class="col-md-12 mx-5"> -->
             <div class="col-md-7 mx-auto">
                 <div>
-                    <input type="text" class="mb-4  form-control" placeholder="enter name please">
-                    <input type="text" class="mb-4 form-control" placeholder="enter your Email">
-                    <input type="text" class="mb-4 form-control" placeholder=" Enter phone Number">
-                    <input type="text" class="mb-4 form-control" placeholder=" Ender your address">
-                    <textarea name="message" id="text" placeholder="text" class="mb-3 form-control"></textarea>
+                    <input type="text" class="mb-4 text-capitalize  form-control" placeholder="enter name please">
+                    <input type="email" class="mb-4 text-capitalize form-control" placeholder="enter your Email">
+                    <input type="text" class="mb-4 text-capitalize form-control" placeholder=" Enter phone Number">
+                    <input type="number" class="mb-4 text-capitalize form-control" placeholder=" Ender your age ">
+                    <textarea name="message" id="text" placeholder="Enter yor Address"
+                        class="mb-3 form-control"></textarea>
                     <button type="submit" class="mb-3 btn text-white btn-outline bg-baheeg">Send Message</button>
                 </div>
             </div>
