--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,8 +7,11 @@
         <div class="container">
             <div class=" disc-sections  row  g-3 ">
                 <div class="col-12">
-                    <div class="text-center text-capitalize my-2">
-                        <h1> Welcom in Baheeg </h1>
+                    <div class="text-center text-capitalize mt-4">
+                        <h1
+                            class="fw-bolder text-white bg-dark d-inline-block p-3 border border-3 border-info rounded-5">
+                            Welcom in Baheeg
+                        </h1>
                     </div>
                 </div>
                 <div class="col-md-5">
