--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class=" main-nav navbar navbar-expand-lg  ">
+<nav class=" main-nav navbar navbar-expand-lg bg-white ">
     <div class="container">
         <a class="navbar-brand"><img src="/images/download.jpeg" class="w-50 rounded-circle" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
