--- a/src/app/card-meal/card-meal.component.html
+++ b/src/app/card-meal/card-meal.component.html
@@ -1,4 +1,4 @@
-<div class="row g-3   ">
+<div #hmada class="row g-3   ">
 
     @for (meal of Data ; track $index) {
     <div class="col-md-3">
@@ -20,10 +20,8 @@
 
 <h2 class="bg-white fw-bolder text-center   mx-auto py-4 my-4 rounded-4"> Recomended Meal For You
 </h2>
-@defer ( ) {
-
-
+@defer ( on viewport) {
 <app-recommended [Datarecomnded]="Data"></app-recommended>
-
-
+}@placeholder {
+<p class="h1 text-warning">loding Recomendation Meals....</p>
 }
