--- a/src/app/recommended/recommended.component.html
+++ b/src/app/recommended/recommended.component.html
@@ -1,4 +1,4 @@
-<div class="container bg-white rounded-3">
+<div class="container bg-white py-3 rounded-3">
     <div class="row g-3   ">
         @for (recomendation of Datarecomnded ; track $index) {
         @if($odd){
