--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -3,6 +3,6 @@
     </p>
     <p>I'm the Child Component "Supervisor" amis To Control the <span class="text-danger">Red Area</span> located on
         My PArent</p>
-    <button (click)="DataShot()" (click)="Disappear()" class="bg-black text-white btn">Click me to send my data to
+    <button (click)="DataShot()" class="bg-black text-white btn">Click me to send my data to
         parent</button>
 </div>
