--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -22,9 +22,9 @@
             distinctio
             fugiat consectetur aperiam voluptatem placeat</p>
         <div id="pp" class="d-none text-center text-capitalize">
-            <p class="  h1 text  bg-danger text-white"> {{ disappeer}}</p>
+            <p class="  h1 text  bg-danger text-white"> {{"disappeared by add class "+ disappeerdata}}</p>
         </div>
-        <div id="dd" class="display-content mx-auto w-75 text-center">
+        <div id="dd" [class]="disappeerdata" class="display-content mx-auto w-75 text-center">
             <img src="/images/Abo Ali Sea food .png" class="w-25" alt="">
             <p class="text-center">quaerat temporibus harum hic! Officiis, natus? Cupiditate ducimus esse velit
                 consectetur sapiente non
@@ -40,7 +40,7 @@
                 non quos numquam corporis impedit ea consectetur nam, suscipit esse</p>
         </div>
         <div>
-            <app-child (childTParentData)="disappeer=$event"></app-child>
+            <app-child (childTParentData)="disappeerdata=$event"></app-child>
         </div>
 
     </div>
